# smart-traffic

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/engine/: __init__.py  traffic_engine.py
backend/app/routers/: internal.py  system.py  traffic.py
backend/app/services/: __init__.py  background.py  state_manager.py
backend/app/ws/: __init__.py  manager.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: control-panel.tsx  event-log.tsx  intersection-view.tsx  scenario-selector.tsx  system-status-bar.tsx  traffic-light.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  separator.tsx
frontend/src/hooks/: use-system-status.ts  use-traffic-socket.ts
frontend/src/pages/: dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: traffic.ts
